Phase 2 | updating fix css for broken layout

--- a/src/pages/styles/_dashboard.scss
+++ b/src/pages/styles/_dashboard.scss
@@ -1,4 +1,6 @@
 .dashboard {
   display: flex;
   gap: 10px;
+  // flex-wrap: wrap;
+  overflow-x: auto;
 }
