--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -7,7 +7,8 @@
 }
 
 .main {
-  width: 100vw;
+  flex: 1;
+  min-width: 0;
   margin-left: $sidebar-width;
   transition: margin-left 0.3s ease;
 }
